gateway-service/3-gateway-service-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30083
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  selector:
    matchLabels:
      app: gateway-service
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: localhost:5001/gateway-service
          ports:
            - containerPort: 8080
